@@ -8,6 +8,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Set;
@@ -15,7 +16,6 @@ import java.util.stream.Collectors;
 import oogasalad.GamePlayer.Board.ChessBoard;
 import oogasalad.GamePlayer.Board.Tiles.ChessTile;
 import oogasalad.GamePlayer.EngineExceptions.OutsideOfBoardException;
-import oogasalad.GamePlayer.EngineExceptions.PieceNotFoundException;
 import oogasalad.GamePlayer.GamePiece.Piece;
 import oogasalad.GamePlayer.Movement.Coordinate;
 import oogasalad.GamePlayer.Movement.Movement;
@@ -60,7 +60,15 @@ public class BankJoiner implements MovementModifier{
           getJSONArray("general").getJSONObject(0).getInt("blockerCol");
     } catch (IOException e) {
       blockCol = BankBlocker.DEFAULT_VALUE;
+      this.configFile = CH_CONFIG_FILE_HEADER + CH_DEFAULT_FILE + JSON_EXTENSION;
     }
+  }
+
+  /***
+   * @return blockCol for testing purposes
+   */
+  int getBlockCol() {
+    return blockCol;
   }
 
   /**
@@ -91,10 +99,7 @@ public class BankJoiner implements MovementModifier{
       Set<ChessTile> updatedCoords = Set.of(bankTile);
       LOG.debug(String.format("Updated coords: %s", updatedCoords));
       return updatedCoords;
-    } catch(OutsideOfBoardException | NullPointerException /*| PieceNotFoundException*/ e) {
-      LOG.warn("Bank joining failed");
-      return Set.of();
-    }
+    } catch(OutsideOfBoardException | NullPointerException /*| PieceNotFoundException*/ e) {return Collections.emptySet();}
   }
 
   /**
@@ -116,8 +121,6 @@ public class BankJoiner implements MovementModifier{
     LOG.debug(String.format("Present pieces: %s", presentPieces));
 
     return pastPieces.stream().filter(p -> !presentPieces.contains(p)).findFirst().orElse(null);
-    /* orElseThrow(
-        () -> new PieceNotFoundException("Taken piece cannot be found for crazyhouse"));*/
   }
 
   /***
@@ -164,11 +167,7 @@ public class BankJoiner implements MovementModifier{
           return startRow;
         }
       }
-      LOG.warn("Default value used for bank start row");
       return DEFAULT_VALUE;
-    } catch (IOException e) {
-      LOG.warn("Default value used for bank start row");
-      return DEFAULT_VALUE;
-    }
+    } catch (IOException e) { return DEFAULT_VALUE;}
   }
 }
